--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,7 @@
     "require": {
         "ext-json": "*",
         "php": "^7.4",
-        "laravel/framework": "^7",
+        "laravel/framework": "7 - 8",
         "guzzlehttp/guzzle": "^7.0"
     },
     "autoload": {
